# tauri-plugin-camera

./: .gitignore  CLAUDE.md  Cargo.toml  FRAME_SENDER_USAGE.md  PLUGIN_DEPENDENCY_GUIDE.md  README.md  WEBRTC_IMPLEMENTATION.md  build.rs  config.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
examples/minimal-streaming/: README.md  index.html  package.json
examples/minimal-streaming/src/: main.ts  styles.css
examples/minimal-streaming/src-tauri/: Cargo.toml  tauri.conf.json
examples/minimal-streaming/src-tauri/capabilities/: default.json
examples/minimal-streaming/src-tauri/src/: lib.rs  main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: core.ts  index.ts  useTauriCamera.ts  webrtc.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_ice_candidate.toml  capture-frame.toml  close_connection.toml  create_answer.toml  create_offer.toml  get-available-cameras.toml  get-stream-format.toml  get_available_cameras.toml  get_connection_state.toml  request-camera-permission.toml  request_camera_permission.toml  set_remote_description.toml  start-streaming.toml  start_camera_webrtc_session.toml  start_streaming.toml  stop-streaming.toml  stop_streaming.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  utils.rs  webrtc.rs
src/commands/: camera.rs  mod.rs  streaming.rs  webrtc.rs
(+1 files in other folders)
