[package]
name = "tauri-plugin-camera"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-camera"

[dependencies]
tauri = { version = "2.9.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.40", features = ["full"] }
log = "0.4"
uuid = "1.19.0"
serde_bytes = "0.11.19"
nokhwa = "0.10.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
crabcamera = { git = "https://github.com/saurL/crabcamera.git", branch ="feat/callbackCamera" }
yuv = "0.8.9"
[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }
